fixed wrapping on title bar

--- a/css/custom.css
+++ b/css/custom.css
@@ -86,7 +86,11 @@ header {
     z-index: 10;
 }
 #backBtn { display: none }
-#title { font-weight: bold }
+#title {
+    font-weight: bold;
+    height: 1.5em;
+    overflow: hidden;
+}
 #menuBtn { padding: 0.25em }
 #menuRight { float: right; padding: 0.25em }
 
@@ -485,4 +489,8 @@ nav { background: var(--bg-color); border-right: 2px solid var(--secondary-bg-co
 .tileView .option {
     min-width: 1.75em;
     font-size: 0.75em;
+}
+#head {
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
 }
